--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -140,6 +140,12 @@
   <ItemGroup>
     <None Include="Resources\splash_fin21.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FONDO_MENU.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pizzeria.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
