--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -50,11 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddProductos.cs">
+    <Compile Include="AddPizzaMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddProductos.Designer.cs">
-      <DependentUpon>AddProductos.cs</DependentUpon>
+    <Compile Include="AddPizzaMenu.Designer.cs">
+      <DependentUpon>AddPizzaMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="conexion.cs" />
     <Compile Include="Form1.cs">
@@ -84,8 +84,8 @@
       <DependentUpon>TomaPedidos.cs</DependentUpon>
     </Compile>
     <Compile Include="Usuarios.cs" />
-    <EmbeddedResource Include="AddProductos.resx">
-      <DependentUpon>AddProductos.cs</DependentUpon>
+    <EmbeddedResource Include="AddPizzaMenu.resx">
+      <DependentUpon>AddPizzaMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
