--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -77,6 +77,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ConsumoLocal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsumoLocal.Designer.cs">
+      <DependentUpon>ConsumoLocal.cs</DependentUpon>
+    </Compile>
     <Compile Include="TomaPedidos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ConsumoLocal.resx">
+      <DependentUpon>ConsumoLocal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TomaPedidos.resx">
       <DependentUpon>TomaPedidos.cs</DependentUpon>
     </EmbeddedResource>
