--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -93,6 +93,12 @@
     <Compile Include="AboutBox1.Designer.cs">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArmaPizza.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ArmaPizza.Designer.cs">
+      <DependentUpon>ArmaPizza.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddPizzaMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     <Compile Include="Usuarios.cs" />
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ArmaPizza.resx">
+      <DependentUpon>ArmaPizza.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AddPizzaMenu.resx">
       <DependentUpon>AddPizzaMenu.cs</DependentUpon>
@@ -258,6 +267,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pizza.ico" />
+    <None Include="Resources\Wallp.png" />
+    <None Include="Resources\FONDO2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
