--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -93,6 +93,12 @@
     <Compile Include="AboutBox1.Designer.cs">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddProductos.Designer.cs">
+      <DependentUpon>AddProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="ArmaPizza.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +158,9 @@
     <Compile Include="Usuarios.cs" />
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddProductos.resx">
+      <DependentUpon>AddProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ArmaPizza.resx">
       <DependentUpon>ArmaPizza.cs</DependentUpon>
@@ -267,6 +276,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pizza.ico" />
+    <None Include="Resources\gray-background.jpg" />
     <None Include="Resources\Wallp.png" />
     <None Include="Resources\FONDO2.jpg" />
   </ItemGroup>
