--- a/Pizzeria/Pizzeria.csproj
+++ b/Pizzeria/Pizzeria.csproj
@@ -99,6 +99,12 @@
     <Compile Include="AddProductos.Designer.cs">
       <DependentUpon>AddProductos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Agregar_Ingredientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Agregar_Ingredientes.Designer.cs">
+      <DependentUpon>Agregar_Ingredientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="ArmaPizza.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +130,13 @@
     </Compile>
     <Compile Include="DetalleRetiro.Designer.cs">
       <DependentUpon>DetalleRetiro.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Imagenes.cs" />
+    <Compile Include="MantenimientoProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MantenimientoProductos.Designer.cs">
+      <DependentUpon>MantenimientoProductos.cs</DependentUpon>
     </Compile>
     <Compile Include="Pagar.cs">
       <SubType>Form</SubType>
@@ -174,6 +187,9 @@
     <EmbeddedResource Include="AddProductos.resx">
       <DependentUpon>AddProductos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Agregar_Ingredientes.resx">
+      <DependentUpon>Agregar_Ingredientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ArmaPizza.resx">
       <DependentUpon>ArmaPizza.cs</DependentUpon>
     </EmbeddedResource>
@@ -185,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DetalleRetiro.resx">
       <DependentUpon>DetalleRetiro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MantenimientoProductos.resx">
+      <DependentUpon>MantenimientoProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pagar.resx">
       <DependentUpon>Pagar.cs</DependentUpon>
@@ -294,6 +313,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pizza.ico" />
+    <None Include="Resources\Gray.png" />
+    <None Include="Resources\gray-background1.jpg" />
     <None Include="Resources\IMG_1467.jpg" />
     <None Include="Resources\gray-background.jpg" />
     <None Include="Resources\Wallp.png" />
